fix: Bottom gap for your-projects

--- a/style.css
+++ b/style.css
@@ -190,6 +190,14 @@ main {
 .your-projects {
     grid-row: 1/3;
     margin-right: 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+}
+
+.your-projects>h2 {
+    grid-column: 1/3;
+    align-self: start;
 }
 
 .your-projects>h2,
@@ -201,7 +209,6 @@ main {
 .project-cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(3, 180px);
     gap: 25px;
 }
 
